Fix weird spacing of main disclaimer

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -23,6 +23,10 @@ h1,h2,h3,h4,h5,h6 {
     margin: 10px 20px 10px 20px;
 }
 
+.main-disclaimer {
+    margin: 0.5rem 0;
+}
+
 .named-anchor {
     padding-top: 5rem;
 }
